traces/bug_212.txt
examples++-mpi/real_SuperLU_DIST_FreeFem.cpp:267: error: DEAD_STORE
  The value written to &infobcast (type int) is never used.
Showing all 1 steps of the trace


examples++-mpi/real_SuperLU_DIST_FreeFem.cpp:267:6: Write of unused value
265.   	    MPI_Bcast( &n,   1,   mpi_int_t,  0, grid.comm );
266.   	    MPI_Bcast( &nnz, 1,   mpi_int_t,  0, grid.comm );
267.   	    int infobcast=MPI_Bcast( a,    nnz, MPI_DOUBLE, 0, grid.comm );
            ^
268.   	    MPI_Bcast( asub, nnz, mpi_int_t,  0, grid.comm );
269.   	    MPI_Bcast( xa,   n+1, mpi_int_t,  0, grid.comm );
